Update Blog “2019-10-02-test_post”

--- a/content/blog/2019-10-02-test_post.md
+++ b/content/blog/2019-10-02-test_post.md
@@ -4,7 +4,7 @@ title: Test Post
 description: >-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ubi ut eam caperet
   aut quando?
-featuredImage: /img/427-500x500.jpg
+featuredImage: /img/asoggetti-c4ho6mzewru-unsplash.jpg
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ubi ut eam caperet aut quando? Ergo hoc quidem apparet, nos ad agendum esse natos. Quid autem habent admirationis, cum prope accesseris? Quod ea non occurrentia fingunt, vincunt Aristonem; Ergo infelix una molestia, fellx rursus, cum is ipse anulus in praecordiis piscis inventus est? Duo Reges: constructio interrete. Duarum enim vitarum nobis erunt instituta capienda. Teneo, inquit, finem illi videri nihil dolere. 
 
