--- a/content/blog/2021-07-21-new_post.md
+++ b/content/blog/2021-07-21-new_post.md
@@ -1,7 +1,7 @@
 ---
 date: 2021-07-21T12:12:11.543Z
 title: New Post
-description: ""
+description: A test post for 2021!
 featuredImage: img/485-500x500.jpg
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. **Memini vero, inquam;** Haec dicuntur fortasse ieiunius; Et ille ridens: Video, inquit, quid agas; Ne in odium veniam, si amicum destitero tueri. Illum mallem levares, quo optimum atque humanissimum virum, Cn. Duo Reges: constructio interrete. Quorum altera prosunt, nocent altera. Scio enim esse quosdam, qui quavis lingua philosophari possint; Quarum ambarum rerum cum medicinam pollicetur, luxuriae licentiam pollicetur. Hoc loco discipulos quaerere videtur, ut, qui asoti esse velint, philosophi ante fiant. Illud quaero, quid ei, qui in voluptate summum bonum ponat, consentaneum sit dicere. Aliter homines, aliter philosophos loqui putas oportere?
